// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ecoflow-out Node should convert PowerStream getLatestQuotas payload 1`] = `
[
  {
    "payload": {
      "data": [
        10,
        16,
        16,
        32,
        24,
        32,
        112,
        240,
        228,
        199,
        172,
        6,
        186,
        1,
        3,
        105,
        111,
        115,
      ],
      "type": "Buffer",
    },
    "topic": "/app/device/HW51ZEH000000000/thing/property/get",
  },
]
`;

exports[`ecoflow-out Node should convert PowerStream setAcWatts payload 1`] = `
[
  {
    "payload": {
      "data": [
        10,
        61,
        10,
        3,
        8,
        232,
        7,
        16,
        32,
        24,
        53,
        32,
        1,
        40,
        1,
        56,
        3,
        64,
        20,
        72,
        129,
        1,
        80,
        3,
        88,
        1,
        112,
        240,
        228,
        199,
        172,
        6,
        128,
        1,
        19,
        136,
        1,
        1,
        186,
        1,
        3,
        105,
        111,
        115,
        202,
        1,
        16,
        72,
        87,
        53,
        49,
        90,
        69,
        72,
        48,
        48,
        48,
        48,
        48,
        48,
        48,
        48,
        48,
      ],
      "type": "Buffer",
    },
    "topic": "/app/device/HW51ZEH000000000/thing/property/set",
  },
]
`;
